# programmiersprachen-raytracer

framework/: box.cpp  box.hpp  camera.cpp  camera.hpp  hitpoint.hpp  light.hpp  lightsource.hpp  material.hpp  ppmwriter.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene.sdf  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
sdf-file/: final_scene.sdf  scene.sdf  scene_1.sdf  scene_ball.sdf  scene_big_box.sdf  scene_camMirror.sdf  scene_doubleMirror.sdf  scene_mirror.sdf  scene_mirrorBall.sdf  scene_refraction.sdf  scene_refractionn.sdf  scene_tests.sdf  scene_transformations.sdf
source/: CMakeLists.txt  raytracer.cpp  sdfGenerator.cpp  tests.cpp
